--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,90 @@
-torch==1.9.0
-torchvision
-tensorflow-gpu == 1.14.0
-tqdm
-pandas
-numpy
-scipy
-chumpy
-scikit-image
-imageio
-dominate
-torchfile
-ffmpeg
-python_speech_features
+absl-py==1.0.0
+appdirs==1.4.4
+astor==0.8.1
+astunparse==1.6.3
+audioread==2.1.9
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.8
+chumpy==0.70
+cloudpickle==2.0.0
+cycler==0.11.0
+Cython==0.29.24
+decorator==5.1.0
+dominate==2.6.0
+ffmpeg==1.4
+fonttools==4.28.2
+gast==0.3.3
+google-pasta==0.2.0
+grpcio==1.42.0
+h5py==2.10.0
+idna==3.3
+imageio==2.12.0
+importlib-metadata==4.8.2
+joblib==1.1.0
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.2
+librosa==0.8.1
+llvmlite==0.37.0
+Markdown==3.3.6
+matplotlib==3.5.0
+networkx==2.6.3
+numba==0.54.1
+numpy==1.18.0
+nvidia-cublas-cu115==11.7.3.1
+nvidia-cuda-cupti-cu115==11.5.57
+nvidia-cuda-nvcc-cu115==11.5.50
+nvidia-cuda-runtime-cu115==11.5.50
+nvidia-cudnn-cu115==8.3.0.98
+nvidia-cufft-cu115==10.6.0.54
+nvidia-curand-cu115==10.2.6.48
+nvidia-cusolver-cu115==11.2.1.48
+nvidia-cusparse-cu115==11.7.0.31
+nvidia-dali-cuda110==1.7.0
+nvidia-dali-nvtf-plugin==1.7.0+nv21.11
+nvidia-horovod==0.22.1+nv21.11
+nvidia-nccl-cu115==2.11.4
+nvidia-pyindex==1.0.9
+nvidia-tensorboard==1.15.0+nv21.4
+nvidia-tensorflow==1.15.5+nv21.11
+opencv-python==4.5.4.60
+opt-einsum==3.3.0
+packaging==21.3
+pandas==1.3.4
+Pillow==8.4.0
+pooch==1.5.2
+protobuf==3.19.1
+psutil==5.8.0
+pycparser==2.21
+pyparsing==3.0.6
+python-dateutil==2.8.2
+python-speech-features==0.6
+pytz==2021.3
+PyWavelets==1.2.0
+PyYAML==6.0
+requests==2.26.0
+resampy==0.2.2
+scikit-image==0.18.3
+scikit-learn==1.0.1
+scipy==1.7.3
+setuptools-scm==6.3.2
+six==1.16.0
+SoundFile==0.10.3.post1
+tensorboard==1.15.0
+tensorflow-estimator==1.15.1
+termcolor==1.1.0
+threadpoolctl==3.0.0
+tifffile==2021.11.2
+tomli==1.2.2
+torch==1.10.0+cu113
+torchaudio==0.10.0+cu113
+torchfile==0.1.0
+torchvision==0.11.1+cu113
+tqdm==4.62.3
+typing_extensions==4.0.0
+urllib3==1.26.7
+webencodings==0.5.1
+Werkzeug==2.0.2
+wrapt==1.13.3
+zipp==3.6.0
